fixed alignment issues

--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -1,6 +1,6 @@
 .project-row {
-  margin-left: -55px !important;
-  margin-right: -55px !important;
+  margin-left: -40px !important;
+  margin-right: -40px !important;
 }
 
 .project-card-container {
